don't need --add-opens fr.cla.wires.core.support.tests.pbt=ALL-UNNAMED